--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/enzyme": "^3.10.3",
     "@types/jest": "^24.0.19",
     "@types/node": "^12.11.1",
     "@types/react": "^16.9.9",
@@ -42,6 +43,8 @@
     ]
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.3"
+    "babel-eslint": "^10.0.3",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1"
   }
 }
